--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "arwes": "^1.0.0-alpha.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0"
+    "arwes": "^1.0.0-next.24091701",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
+    "react-scripts": "^5.0.1"
   },
   "overrides": {
     "nth-check@1.0.2": "2.0.1"
